--- a/MyDocs.Application/MyDocs.Application.csproj
+++ b/MyDocs.Application/MyDocs.Application.csproj
@@ -4,4 +4,19 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts\Contracts\" />
+    <Folder Include="Features\Posts\Commands\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyDocs.Domain\MyDocs.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
