--- a/MyDocs.Infrastructure/MyDocs.Infrastructure.csproj
+++ b/MyDocs.Infrastructure/MyDocs.Infrastructure.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
+    <PackageReference Include="SendGrid" Version="9.23.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MyDocs.Application\MyDocs.Application.csproj" />
+  </ItemGroup>
+
 </Project>
