--- a/MyDocs.Application.IntegrationTests/MyDocs.Application.IntegrationTests.csproj
+++ b/MyDocs.Application.IntegrationTests/MyDocs.Application.IntegrationTests.csproj
@@ -31,4 +31,8 @@
     <ProjectReference Include="..\MyDocs.Api\MyDocs.Api.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Core\Features\Forums\Commands\" />
+  </ItemGroup>
+
 </Project>
