Testing brought a few errors and starting to really feel the benefit of TDD which is great. Fixed the bugs and added a new update to the DB in forums adding an Owner ID

--- a/MyDocs.Persistance/MyDocs.Persistance.csproj
+++ b/MyDocs.Persistance/MyDocs.Persistance.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MyDocs.Application\MyDocs.Application.csproj" />
+    <ProjectReference Include="..\MyDocs.Infrastructure\MyDocs.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
