--- a/MyDocs.Application/MyDocs.Application.csproj
+++ b/MyDocs.Application/MyDocs.Application.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\MyDocs.Domain\MyDocs.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Posts\Commands\UpdatePost\" />
+  </ItemGroup>
+
 </Project>
